--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600&display=swap');
 
-body{
+body {
     background-color: aliceblue;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 50px;
-    font-family:'Poppins',sans-serif;
+    padding: 20px;
+    font-family: 'Poppins', sans-serif;
 }
 
-.app{
-    width: 450px;
+.app {
+    width: 100%;
+    max-width: 450px;
     padding: 25px;
     color: #e5e5e5;
     border-radius: 10px;
-    box-shadow: 4px 4px 15px 0px rgba(0,0,0,0.2);
-    background: linear-gradient(108deg,#821ea9,#7c43e0);
+    box-shadow: 4px 4px 15px 0px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(108deg, #821ea9, #7c43e0);
 }
-.app h1{
+
+.app h1 {
     text-align: center;
     font-size: 24px;
     font-weight: 700;
     text-transform: uppercase;
 }
-.input-wrapper{
+
+.input-wrapper {
     display: flex;
+    margin-bottom: 20px;
 }
-.input-wrapper input{
-    width: 100%;
+
+.input-wrapper input {
+    flex: 1;
     padding: 5px 10px;
     height: 30px;
     font-size: 14px;
@@ -35,10 +40,12 @@ body{
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
 }
-.input-wrapper input:focus{
+
+.input-wrapper input:focus {
     outline: none;
 }
-.input-wrapper button{
+
+.input-wrapper button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -50,63 +57,106 @@ body{
     cursor: pointer;
     width: 80px;
 }
-.content{
+
+.content {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(262deg,rgba(0,0,0,0.1),rgba(0,0,0,0.4)) ;
-    margin-top: 10px;
+    background: linear-gradient(262deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4));
     border-radius: 10px;
+    padding: 20px;
 }
-.d-flex{
+
+.d-flex {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.flex-c{
+
+.flex-c {
     flex-direction: column;
 }
-.location{margin-top: 20px;}
-.location h2{
+
+.location {
+    margin-top: 20px;
+}
+
+.location h2 {
     margin: 0;
     margin-left: 10px;
     font-weight: 400;
     font-size: 35px;
 }
-.location h2 span{
+
+.location h2 span {
     font-size: 14px;
 }
-.datetext{
+
+.datetext {
     font-size: 14px;
 }
-.weatherdesc h3{
+
+.weatherdesc h3 {
     margin: 0;
     text-transform: capitalize;
     font-weight: 400;
 }
-.tempstats{
+
+.tempstats {
     width: 100%;
     padding: 20px 0px;
 }
-.tempstats h1{
+
+.tempstats h1 {
     font-size: 64px;
     font-weight: 200;
     margin: 0;
 }
-.tempstats h1 span{
+
+.tempstats h1 span {
     font-size: 38px;
 }
-.tempstats h3{
+
+.tempstats h3 {
     font-weight: 400;
 }
-.windstats{
+
+.windstats {
     padding: 0px 20px;
-    background:rgba(0,0,0,0.3);
+    background: rgba(0, 0, 0, 0.3);
     margin-bottom: 20px;
     border-radius: 10px;
 }
-.windstats h3{
+
+.windstats h3 {
     margin-left: 10px;
     font-weight: 400;
+}
+
+/* Media Queries for responsiveness */
+
+@media (max-width: 768px) {
+    .app {
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .app {
+        max-width: 350px;
+        padding: 15px;
+    }
+
+    .input-wrapper input {
+        font-size: 12px;
+    }
+
+    .tempstats h1 {
+        font-size: 48px;
+    }
+
+    .tempstats h1 span {
+        font-size: 30px;
+    }
 }
